<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/aboutUs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/aboutContest"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DILZ"
                android:textSize="30sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:antialias="true" />
            <!-- android:background="@drawable/bg_naonod_com" -->


            <!-- <TextView -->
            <!-- android:id="@+id/textView1" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_gravity="center" -->
            <!-- android:gravity="center_horizontal" -->
            <!-- android:text="@string/about_find_us_on_naonod_com" -->
            <!-- android:textColor="#000000" -->
            <!-- android:textSize="16dp" /> -->
        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/pressed_odilz"
            android:gravity="center_horizontal"
            android:text="@string/about_application_mobile_design"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
        <!-- android:background="@color/gray_light" -->

        <TextView
            android:id="@+id/tvAboutJulien"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/about_julien"
            android:textColor="#000000"
            android:textSize="18dp" />

        <!-- <TextView -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_marginTop="10dp" -->
        <!-- android:gravity="center_horizontal" -->
        <!-- android:text="@string/about_website" -->
        <!-- android:textColor="@android:color/white" android:background="@color/pressed_odilz" -->
        <!-- android:textSize="18dp" /> -->
        <!-- android:background="@color/gray_light" -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/pressed_odilz"
            android:gravity="center_horizontal"
            android:text="@string/about_backend"
            android:textColor="@android:color/white"
            android:textSize="18dp" />
        <!-- android:background="@color/gray_light" -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAboutArzhel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.15"
                android:gravity="center_horizontal"
                android:text="@string/about_arzhel"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:drawablePadding="-15dp"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/about_and_amp"
                android:textColor="#000000"
                android:textSize="18dp" />
            <!-- android:drawableStart="@drawable/bg_about_and" -->

            <TextView
                android:id="@+id/tvAboutDimitri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="18dp"
                android:layout_weight="0.15"
                android:gravity="center_horizontal"
                android:text="@string/about_dimitri"
                android:textColor="#000000"
                android:textSize="18dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAboutThomas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/about_thomas"
            android:textColor="#000000"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/aboutContest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:drawablePadding="4dp"
        android:gravity="bottom"
        android:text="@string/about_contest"
        android:textColor="#000000"
        android:textSize="12dp" />

</RelativeLayout>