<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <TextView -->
    <!-- android:id="@+id/placeName" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginLeft="4dp" -->
    <!-- android:ellipsize="marquee" -->
    <!-- android:singleLine="true" -->
    <!-- android:text="@+id/placeName" -->
    <!-- android:textColor="#000000" -->
    <!-- android:textSize="24dp" /> -->


    <!-- <View -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="1dp" -->
    <!-- android:layout_marginBottom="4dp" -->
    <!-- android:background="#ff0000" /> -->

    <TextView
        android:id="@+id/placeDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_contacts"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="#ff0000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/placeDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:src="@drawable/ic_directions" />

            <TextView
                android:id="@+id/placeAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@+id/tvPOIAddress"
                android:textColor="#000000" />
        </LinearLayout>

        <TextView
            android:id="@+id/placePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:autoLink="phone"
            android:text="@+id/placePhone"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/placeMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:autoLink="email"
            android:text="@+id/placeMail"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- <TextView -->
    <!-- android:id="@+id/placeDistance" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="fill_parent" -->
    <!-- android:gravity="bottom" -->
    <!-- android:textColor="#000000" /> -->


    <!-- </LinearLayout> -->


    <!-- <FrameLayout -->
    <!-- android:id="@+id/mapViewContainer2" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="200dp" > -->


    <!-- <FrameLayout -->
    <!-- android:id="@+id/mapViewContainer" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="200dp" > -->
    <!-- </FrameLayout> -->
    <!-- </FrameLayout> -->

    <com.cyrilmottier.polaris.PolarisMapView
        android:id="@+id/polaris_map_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:apiKey="0aZG3J-qvklV4eNyTERVtY5TA7kKd7KE99nKauQ" />

    <TextView
        android:id="@+id/placeDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/place_description"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="4dp"
        android:background="#ff0000" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/placeDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/lorem"
            android:textColor="#000000" />
    </ScrollView>

</LinearLayout>