<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <TextView -->
    <!-- android:id="@+id/textView1" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_marginLeft="8dp" -->
    <!-- android:text="@string/search_hobbies" -->
    <!-- android:textAppearance="?android:attr/textAppearanceLarge" /> -->


    <!-- <View -->
    <!-- android:id="@+id/view1" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="1dp" -->
    <!-- android:background="#000000" /> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchRange"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/searchWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_weather"
            android:textSize="18sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#ff0000" />

        <LinearLayout
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <LinearLayout
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/weatherTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/weatherSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/searchHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/search_hobbies"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="4dp"
            android:background="#ff0000" />

        <GridView
            android:id="@+id/search_hobbies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:numColumns="3"
            android:paddingTop="16dp"
            android:verticalSpacing="16dp" >
        </GridView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:text="@string/search_range"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/searchRangeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:text="km"
                android:textSize="16sp" />
        </FrameLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#ff0000" />

        <SeekBar
            android:id="@+id/searchSeekkBarRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:max="29"
            android:progress="9" />
    </LinearLayout>

</RelativeLayout>